# kleinhirn

./: .gitignore  Cargo.toml  Dockerfile  Gemfile  README.md  template-ci.toml
.circleci/: config.yml
example_configs/: continually_restarting_sleeper.toml  forkexec_continually_restarting_sleeper.toml  nc_program.toml  preloaded_continually_restarting_sleeper.toml
gems/kleinhirn_loader/: .rubocop.yml  Gemfile  Rakefile  kleinhirn_loader.gemspec
gems/kleinhirn_loader/examples/sleeper_agent/: Gemfile  sleeper_agent.rb
gems/kleinhirn_loader/lib/: kleinhirn_loader.rb
gems/kleinhirn_loader/lib/kleinhirn_loader/: cli.rb  command.rb  env.rb  loader.rb  replies.rb  worker.rb
gems/kleinhirn_loader/sorbet/rbi/gems/: parser.rbi  rake.rbi  rubocop.rbi
gems/kleinhirn_loader/sorbet/rbi/hidden-definitions/: errors.txt  hidden.rbi
kleinhirn/: Cargo.toml
kleinhirn-supervisor/: Cargo.toml
kleinhirn-supervisor/src/: configuration.rs  lib.rs  preloader.rs  process_control.rs  reaper.rs  worker_set.rs
kleinhirn-supervisor/src/preloader/: logging.rs  machine.rs
kleinhirn-supervisor/tests/: reaper.rs  worker_set.rs
kleinhirn/src/: main.rs
ruby/: kleinhirn_loader.gemspec
ruby/lib/: kleinhirn_loader.rb
src/: configuration.rs  fork_exec.rs  health.rs  lib.rs  main.rs  preloader.rs  process_control.rs  reaper.rs  supervisor.rs  worker_ack.rs  worker_set.rs
src/health/: smol_hyper.rs
src/preloader/: linux.rs  logging.rs  machine.rs
src/supervisor/: child_processes_linux.rs  control.rs  preloader.rs  reaper.rs  worker.rs  worker_set.rs
tests/: reaper.rs  worker_set.rs
xtask/: Cargo.toml
xtask/src/: main.rs
