[package]
edition = '2018'
name = "kleinhirn"
version = "0.0.1-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/kleinhirn"
readme = "README.md"
description = "A prefork socket management tool, process supervisor and code preloader"
documentation = "https://docs.rs/kleinhirn"

[lib]
name = "kleinhirn"
path = "src/lib.rs"

[[bin]]
name = "kleinhirn"
path = "src/main.rs"

[badges]
travis-ci = { repository = "antifuchs/kleinhirn", branch = "master" }
maintenance = { status = "passively-maintained" }

[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}} 🎉🎉"
pro-release-commit-message = "Start next development iteration {{version}}"
tag-message = "Release {{prefix}}{{version}}"
dev-version-ext = "dev"
tag-prefix = "v"

[package.metadata.template_ci]
test_commandline = "cargo xtask ci"

[package.metadata.template_ci.clippy]
allow_failure = false
version = "stable"

[dependencies]
structopt = "0.3.8"
config = "0.10.1"
serde = {version = "1.0.104", features = ["derive"]}
nix = "0.16.1"
futures = "0.3.1"
signal-hook = "0.1.12"
parking_lot = "0.10.0"
anyhow = "1.0.26"
slog = "2.5.2"
slog-term = "2.4.2"
slog-scope = "4.3.0"
tokio = {version = "0.2.9", features = ["io-util", "uds", "time", "rt-core"] }
machine = "0.3.0"

[dev-dependencies]
rusty-fork = "0.2.2"
mockall = "0.6.0"