[package]
edition = '2018'
name = "kleinhirn-supervisor"
version = "0.0.1-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/kleinhirn"
readme = "README.md"
description = "A prefork socket management tool, process supervisor and code preloader"
documentation = "https://docs.rs/kleinhirn-supervisor"

[badges]
travis-ci = { repository = "antifuchs/kleinhirn", branch = "master" }
maintenance = { status = "passively-maintained" }

[package.metadata.release]
sign-commit = false
upload-doc = false
pre-release-commit-message = "Release {{version}} 🎉🎉"
pro-release-commit-message = "Start next development iteration {{version}}"
tag-message = "Release {{prefix}}{{version}}"
dev-version-ext = "dev"
tag-prefix = "v"

[dependencies]
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.48"
nix = "0.16.1"
futures = "0.3.1"
signal-hook = "0.1.12"
parking_lot = "0.10.0"
anyhow = "1.0.26"
thiserror = "1.0"
slog = {version = "2.5.2", features = ["dynamic-keys"]}
slog-term = "2.4.2"
slog-scope = "4.3.0"
tokio = {version = "0.2.11", features = ["io-util", "uds", "time", "rt-core", "macros", "sync"] }
machine = "0.3.0"
async-trait = "0.1.24"
uuid = {version = "0.8.1", features = ["v4"] }
prctl = "1.0.0"

[dev-dependencies]
rusty-fork = "0.2.2"
faux = "0.0.4"
matches = "0.1.8"