[package]
edition = "2018"
name = "kleinhirn"
version = "0.1.0-dev"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
repository = "https://github.com/antifuchs/kleinhirn"
readme = "README.md"
description = "A prefork socket management tool, process supervisor and code preloader"
documentation = "https://docs.rs/kleinhirn-supervisor"

[[bin]]
name = "kleinhirn"
path = "src/main.rs"

[dependencies]
kleinhirn-supervisor = {version = "0.0.1-dev", path = "../kleinhirn-supervisor"}
structopt = "0.3.8"
config = "0.10.1"
tokio = {version = "0.2.11", features = ["io-util", "uds", "time", "rt-core", "macros"] }
prctl = "1.0.0"
slog = "2.5.2"
slog-term = "2.4.2"
slog-scope = "4.3.0"
anyhow = "1.0.26"
